# barq-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.server  Dockerfile.server.dockerignore  NOTICE  Package.swift  README.md  dependencies.yml
.github/workflows/: build-cocoa-xcframework.yml
bindgen/: .eslintignore  CMakeLists.txt  spec.yml  tsconfig.json
bindgen/src/: barq_helpers.h  bound-model.ts  program.ts
doc/: vector_search.md
src/: CMakeLists.txt  barq.h  barq.hpp  module.modulemap
src/barq/: .gitignore  CMakeLists.txt  aggregate_ops.hpp  alloc.cpp  alloc.hpp  alloc_slab.cpp  alloc_slab.hpp  array.cpp  array.hpp  array_backlink.cpp  array_backlink.hpp  array_basic.hpp  array_basic_tpl.hpp  array_binary.cpp  array_binary.hpp  array_blob.cpp  array_blob.hpp  array_blobs_big.cpp  array_blobs_big.hpp  array_blobs_small.cpp  array_blobs_small.hpp  array_bool.hpp  array_decimal128.cpp  array_decimal128.hpp  array_direct.hpp  array_fixed_bytes.cpp  array_fixed_bytes.hpp  array_integer.cpp  array_integer.hpp  array_integer_tpl.hpp  array_key.cpp  array_key.hpp  array_list.hpp  array_mixed.cpp  array_mixed.hpp  array_ref.hpp  array_string.cpp  array_string.hpp  array_string_short.cpp  array_string_short.hpp  (+129 more)
src/barq/exec/: CMakeLists.txt  barq2json.cpp  barq_browser.cpp  barq_decrypt.cpp  barq_dump.c  barq_encrypt.cpp  barq_enumerate.cpp  barq_trawler.cpp  barqd.cpp  hex_util.hpp  importer.cpp  importer.hpp  importer_tool.cpp
src/barq/object-store/c_api/: CMakeLists.txt  app.cpp  barq.c  barq.cpp  barq.hpp  config.cpp  conversion.hpp  dictionary.cpp  error.cpp  error.hpp  http.cpp  list.cpp  logging.cpp  notifications.cpp  object.cpp  query.cpp  scheduler.cpp  schema.cpp  set.cpp  socket_provider.cpp  sync.cpp  types.hpp  util.cpp  util.hpp  vector.cpp
src/barq/sync/: CMakeLists.txt  binding_callback_thread_observer.hpp  changeset.cpp  changeset.hpp  changeset_encoder.cpp  changeset_encoder.hpp  changeset_parser.cpp  changeset_parser.hpp  client.cpp  client.hpp  client_base.hpp  config.cpp  config.hpp  history.cpp  history.hpp  instruction_applier.cpp  instruction_applier.hpp  instruction_replication.cpp  instruction_replication.hpp  instructions.cpp  instructions.hpp  object_id.cpp  object_id.hpp  protocol.cpp  protocol.hpp  socket_provider.hpp  subscriptions.cpp  subscriptions.hpp  transform.cpp  transform.hpp  trigger.hpp
src/barq/sync/impl/: clamped_hex_dump.hpp  clock.hpp
src/barq/sync/network/: default_socket.cpp  default_socket.hpp  http.cpp  http.hpp  network.cpp  network.hpp  network_ssl.cpp  network_ssl.hpp  websocket.cpp  websocket.hpp  websocket_error.hpp
src/barq/sync/noinst/: changeset_index.cpp  changeset_index.hpp  client_history_impl.cpp  client_history_impl.hpp  client_impl_base.cpp  client_impl_base.hpp  client_reset.cpp  client_reset.hpp  client_reset_operation.cpp  client_reset_operation.hpp  client_reset_recovery.cpp  client_reset_recovery.hpp  integer_codec.hpp  migration_store.cpp  migration_store.hpp  pending_bootstrap_store.cpp  pending_bootstrap_store.hpp  pending_reset_store.cpp  pending_reset_store.hpp  protocol_codec.cpp  protocol_codec.hpp  root_certs.hpp  sync_metadata_schema.cpp  sync_metadata_schema.hpp  sync_schema_migration.cpp  sync_schema_migration.hpp
src/barq/sync/noinst/server/: CMakeLists.txt  access_control.cpp  access_control.hpp  access_token.cpp  access_token.hpp  clock.hpp  crypto_server.hpp  crypto_server_apple.mm  crypto_server_openssl.cpp  crypto_server_stub.cpp  permissions.hpp  server.cpp  server.hpp  server_dir.cpp  server_dir.hpp  server_file_access_cache.cpp  server_file_access_cache.hpp  server_history.cpp  server_history.hpp  server_impl_base.hpp  server_main.cpp
src/barq/sync/tools/: CMakeLists.txt  apply_to_state_command.cpp  barq_encryption_test.cpp  barq_sync_e2e.cpp  hist_command.cpp  inspect_client_barq.cpp  print_changeset.cpp
src/spm/: dummy.mm
test/: .gitignore  CMakeLists.txt  Package.appxmanifest  combined_tests.cpp  fuzz_group.cpp  fuzz_group.hpp  fuzz_tester.hpp  main.cpp  main.mm  peer.hpp  pthread_test.hpp  signed_admin_token  sync_fixtures.hpp  test.hpp  test_all.cpp  test_all.hpp  test_alloc.cpp  test_array.cpp  test_array_blob.cpp  test_array_blobs_big.cpp  test_array_blobs_small.cpp  test_array_float.cpp  test_array_integer.cpp  test_array_mixed.cpp  test_array_string_short.cpp  test_array_sync.cpp  test_binary_data.cpp  test_bplus_tree.cpp  test_changeset_encoding.cpp  test_client_reset.cpp  test_column.cpp  test_column_float.cpp  test_column_string.cpp  test_column_timestamp.cpp  test_compaction.cpp  test_crypto.cpp  test_db.cpp  test_decimal128.cpp  test_destroy_guard.cpp  test_dictionary.cpp  (+91 more)
test/barq-fuzzer/: CMakeLists.txt  README.md  afl_runner.cpp  fuzz_configurator.cpp  fuzz_configurator.hpp  fuzz_engine.cpp  fuzz_object.cpp  fuzz_object.hpp  libfuzzer_runner.cpp  util.hpp
test/barq-fuzzer/scripts/: start_fuzz_afl.sh  start_lib_fuzzer.sh
test/benchmark-vector-search/: CMakeLists.txt  knn_check.cpp  main.cpp
test/fuzzy/: afl.cpp  (+5 more)
test/object-store/: CMakeLists.txt  audit.cpp  backup.cpp  barq.cpp  collection_change_indices.cpp  collection_fixtures.hpp  dictionary.cpp  frozen_objects.cpp  geospatial.cpp  index_set.cpp  list.cpp  migrations.cpp  nested_collections.cpp  object.cpp  object_store.cpp  primitive_list.cpp  results.cpp  schema.cpp  sectioned_results.cpp  set.cpp  test_runner.cpp  thread_safe_reference.cpp  transaction_log_parsing.cpp  uuid.cpp
test/object-store/benchmarks/: CMakeLists.txt  client_reset.cpp  main.cpp  object.cpp  results.cpp
test/object-store/c_api/: c_api.cpp  c_api_file_tests.c  main.cpp
test/object-store/sync/: file.cpp  sync_manager.cpp
test/object-store/sync/session/: connection_change_notifications.cpp  progress_notifications.cpp  session.cpp  wait_for_completion.cpp
test/object-store/util/: event_loop.cpp  event_loop.hpp  test_file.cpp  test_file.hpp  test_utils.cpp  test_utils.hpp
test/object-store/util/sync/: session_util.hpp  sync_test_utils.cpp  sync_test_utils.hpp
tools/: build-apple-device.sh  build-cocoa.sh
(+301 files in other folders)
